dclone package version history

Version 1.8-2, March 4, 2013
    * custommodel: splits length 1 character model by '\n'.
      This is the type of model specification that is used
      in STAN related examples.
    * New cloning option added: dctr, allows cloning column-wise.
      This change was motivated by some STAN related data specification
      difficulties.

Version 1.8-1, September 3, 2012
    * clusterSplit now checks inheritence of its cl argument in
      R-devel (2.16.0 to be), as a result plotClusterSize
      threw an error when supplying a simple vector to clusterSplit
      (reported by B Ripley), this is now fixed.

Version 1.8-0, July 6, 2012
    * dciid: new function added, it is similar to dcdim.
      dciid attaches an attribute to data frames or matrices
      about columns to be treated as i.i.d. observations
      by dclone(). This aims to facilitates working with the INLA
      package to generate approximate marginals based on DC.
    * dclone.dciid: proper cloning of objects with "dciid"
      tag. It respects possible groupings of observations.

Version 1.7-2, March 21, 2012
    * custommodel and write.jags.model fixed and modified.
      These now accept connection as filename argument.
    * lambdamax.diag and chisq.diag are now generics.
      Methods for mcmc.list is defined.
    * inst/COPYING file removed (standard license).

Version 1.7-1, January 31, 2012
    * Now that rjags is only suggested
      rjags is loaded by snowWrapper if JAGS is used
      (dc.parfit, jags.parfit, parJagsModel).
    * n.chains argument was not passed by dc.parfit
      with partype %in% c("parchains", "balancing").
      Bug is now fixed, thanks to K. Nadeem (UofA).
    * length(cl) >= n.chains is required in
      parJagsModel, parUpdate and parCodaSamples
      recognizes empty workers accordingly.
    * lecuyer module is checked only for clusters
      and not for forking.
    * Rd files cleaned up, documentation is up-to-date.
