@@ -7,6 +7,8 @@ Version 1.8-2, March 4, 2013
     * New cloning option added: dctr, allows cloning column-wise.
       This change was motivated by some STAN related data specification
       difficulties.
+    * dctable: failed when mcmc.list had 1 parameter.
+      This is now fixed by using varnames(x, allow.null=FALSE).
 
 Version 1.8-1, September 3, 2012
     * clusterSplit now checks inheritence of its cl argument in
